tests/miniJava/neg/003860_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { if String 0 ) { } else { } } }
